--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -1,8 +1,11 @@
 .side-by-side {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: minmax(100%, auto);
-    grid-template-areas: "side side side main main main main main main main main main";
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas: "head head head head"
+                         "side main main main" 
+                         "footer footer footer footer";
+    height: 100%;
 }
 
 .side-by-side aside {
